# ILotto

./: .gitignore  Dockerfile  Lotto.csv  README.md  evaluate.py  hello.py  helpers.py  ilotto.py  logger.py  model.py  pyproject.toml  requirements.txt  train.ipynb  train.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
input/: Orig_IL_lotto.csv  lottoIL_filt.csv  lotto_IL_filtered.csv
model/Ilotto/: fingerprint.pb  keras_metadata.pb
model/Ilotto/variables/: variables.data-00000-of-00001  variables.index
