[project]
name = "ilotto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mdutils>=1.6.0",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pydot>=3.0.4",
    "pydotplus>=2.0.2",
    "pyyaml>=6.0.2",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]


[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401"]
